--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,11 +49,15 @@ body {
   white-space: nowrap;
 }
 
+.animate-scroll:hover {
+  animation-play-state: paused;
+}
+
 @keyframes scroll {
   0% {
-    transform: translateX(100%);
+    transform: translateX(0);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
